[gd_scene format=3 uid="uid://bgtqalbkgwcnf"]

[ext_resource type="Script" uid="uid://c34t2r3eupnbr" path="res://cheatmenu.gd" id="1_4y0sh"]

[sub_resource type="LabelSettings" id="LabelSettings_4y0sh"]
font_size = 12
font_color = Color(1, 0.5833334, 0, 1)

[node name="cheatmenu" type="Window" unique_id=403857395]
oversampling_override = 1.0
title = "Gr√§vning - Cheat Menu"
initial_position = 2
size = Vector2i(500, 300)
content_scale_mode = 1
script = ExtResource("1_4y0sh")

[node name="Panel" type="Panel" parent="." unique_id=786934596]
offset_right = 500.0
offset_bottom = 300.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel" unique_id=1699840458]
layout_mode = 0
offset_right = 500.0
offset_bottom = 300.0

[node name="Control" type="Control" parent="Panel/ScrollContainer" unique_id=437382358]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="warning" type="Label" parent="Panel/ScrollContainer/Control" unique_id=2054580191]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_right = 180.0
offset_bottom = 23.0
grow_horizontal = 2
pivot_offset_ratio = Vector2(0.5, 0)
text = "WARNING: Use of ANY of these cheats will invalidate your run!"
label_settings = SubResource("LabelSettings_4y0sh")

[node name="instantwin" type="Button" parent="Panel/ScrollContainer/Control" unique_id=1249398168]
layout_mode = 0
offset_left = 16.0
offset_top = 29.0
offset_right = 131.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 12
text = "Instant Win (Alt+L)"

[node name="leveljump_input" type="SpinBox" parent="Panel/ScrollContainer/Control" unique_id=245102545]
layout_mode = 0
offset_left = 16.0
offset_top = 63.0
offset_right = 120.0
offset_bottom = 94.0
min_value = 1.0
value = 1.0
prefix = "Level:"

[node name="leveljump" type="Button" parent="Panel/ScrollContainer/Control" unique_id=146813546]
layout_mode = 0
offset_left = 122.0
offset_top = 65.0
offset_right = 209.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 12
text = "Jump to Level"

[node name="setshot_input" type="SpinBox" parent="Panel/ScrollContainer/Control" unique_id=1813260398]
layout_mode = 0
offset_left = 16.0
offset_top = 102.0
offset_right = 120.0
offset_bottom = 133.0
max_value = 99.0
prefix = "Shots:"

[node name="setshot" type="Button" parent="Panel/ScrollContainer/Control" unique_id=2067511733]
layout_mode = 0
offset_left = 122.0
offset_top = 104.0
offset_right = 184.0
offset_bottom = 129.0
theme_override_font_sizes/font_size = 12
text = "Set Shots"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="size_changed" from="." to="." method="_on_size_changed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/ScrollContainer/Control/instantwin" to="." method="instant_win"]
[connection signal="pressed" from="Panel/ScrollContainer/Control/leveljump" to="." method="level_jump"]
[connection signal="pressed" from="Panel/ScrollContainer/Control/setshot" to="." method="set_shots"]
